fix(form-builder): remove 1px gap above pte in fullscreen mode (#2615)

--- a/packages/@sanity/form-builder/src/inputs/PortableText/PortableTextInput.css
+++ b/packages/@sanity/form-builder/src/inputs/PortableText/PortableTextInput.css
@@ -10,7 +10,7 @@
   */
   &.fullscreenPortal {
     position: absolute;
-    top: 1px;
+    top: 0;
     left: 0;
     right: 0;
     bottom: 0;
